--- a/src/views/main/home.ejs
+++ b/src/views/main/home.ejs
@@ -8,19 +8,22 @@
                     <div class="ofertasBloques">
                         <div class="bloque1">
                             <div class="articulo-horno">
-                                <div class="horno"><img src="images/products/horno.jpeg"> </div>
-                                <div class="relative-horno">
-                                    <div class="img-envio"><i class="fa-solid fa-truck"></i></div>
-                                    <div class="precio-descuento">
-                                        <div class="precios">$6.770</div>
-                                        <div class="desc">40% OFF</div>
+                                <a class="link" href="productdetail">
+                                    <div class="horno"><img src="images/products/horno.jpeg"> </div>
+                                    <div class="relative-horno">
+                                        <div class="img-envio"><i class="fa-solid fa-truck"></i></div>
+                                        <div class="precio-descuento">
+                                            <div class="precios">$6.770</div>
+                                            <div class="desc">40% OFF</div>
+                                        </div>
+                                        <div class="descripcion">Horno microondas</div>
                                     </div>
-                                    <div class="descripcion">Horno microondas</div>
-                                </div>
+                                </a>
                             </div>
 
 
                             <div class="articulo-laptop">
+                                <a class="link" href="productdetail">
                                 <div class="laptop"><img src="images/products/laptop.jpg"></div>
                                 <div class="relative-laptop">
                                     <div class="img-envio"><i class="fa-solid fa-truck"></i></div>
@@ -30,10 +33,12 @@
                                     </div>
                                     <div class="descripcion">Laptop Pro 2019</div>
                                 </div>
+                                </a>
                             </div>
                         </div>
                         <div class="bloque2">
                             <div class="articulo-samsung">
+                                <a class="link" href="productdetail">
                                 <div class="samsung"><img src="images/products/img-samsung-galaxy-s10.jpg"></div>
                                 <div class="relative-samsung">
                                     <div class="img-envio"><i class="fa-solid fa-truck"></i></div>
@@ -43,8 +48,10 @@
                                     </div>
                                     <div class="descripcion">Samsung Galaxy S10</div>
                                 </div>
+                                </a>
                             </div>
                             <div class="articulo-tv">
+                                <a class="link" href="productdetail">
                                 <div class="tv"><img src="images/products/img-tv-samsung-smart.jpg"></div>
                                 <div class="relative-tv">
                                     <div class="img-envio"><i class="fa-solid fa-truck"></i></div>
@@ -54,6 +61,7 @@
                                     </div>
                                     <div class="descripcion">SmartTv Samsung 43"</div>
                                 </div>
+                                </a>
                             </div>
                         </div>
                     </div>
@@ -63,6 +71,7 @@
                     <div class="ofertasBloques">
                         <div class="bloque1">
                             <div class="articulo-horno">
+                                <a class="link" href="productdetail">
                                 <div class="horno"><img src="images/products/horno.jpeg"></div>
                                 <div class="relative-horno">
                                     <div class="img-envio"><i class="fa-solid fa-truck"></i></div>
@@ -72,9 +81,11 @@
                                     </div>
                                     <div class="descripcion">Horno microondas</div>
                                 </div>
+                                </a>
                             </div>
 
                             <div class="articulo-laptop">
+                                <a class="link" href="productdetail">
                                 <div class="laptop"><img src="images/products/laptop.jpg"></div>
                                 <div class="relative-laptop">
                                     <div class="img-envio"><i class="fa-solid fa-truck"></i></div>
@@ -84,10 +95,12 @@
                                     </div>
                                     <div class="descripcion">Laptop Pro 2019</div>
                                 </div>
+                                </a>
                             </div>
                         </div>
                         <div class="bloque2">
                             <div class="articulo-samsung">
+                                <a class="link" href="productdetail">
                                 <div class="samsung"><img src="images/products/img-samsung-galaxy-s10.jpg"></div>
                                 <div class="relative-samsung">
                                     <div class="img-envio"><i class="fa-solid fa-truck"></i></div>
@@ -97,8 +110,10 @@
                                     </div>
                                     <div class="descripcion">Samsung Galaxy S10</div>
                                 </div>
+                                </a>
                             </div>
                             <div class="articulo-tv">
+                                <a class="link" href="productdetail">
                                 <div class="tv"><img src="images/products/img-tv-samsung-smart.jpg"></div>
                                 <div class="relative-tv">
                                     <div class="img-envio"><i class="fa-solid fa-truck"></i></div>
@@ -108,6 +123,7 @@
                                     </div>
                                     <div class="descripcion">SmartTv Samsung 43"</div>
                                 </div>
+                                </a>
                             </div>
                         </div>
                     </div>
