--- a/src/views/product/productdetail.ejs
+++ b/src/views/product/productdetail.ejs
@@ -26,9 +26,9 @@
                     <p>Código: 0802 0011 2236</p>
                 </div>
             </div>
-            <div class="slide1"><img src="/images/products/img-samsung-galaxy-s10.jpg" alt="aquívalaimagendelproducto"></div>
+            <div class="slide1"><img src="/images/products/<%= product.image %>" alt="aquívalaimagendelproducto"></div>
             <div class="price1">
-                <p class="price2">1.700.000</p>
+                <p class="price2"><%= product.price %></p>
             </div>
             <div id="containerPriceAndShipping1">
                 <div class="deliveryOptions1">
