--- a/src/views/product/formCreationProduct.ejs
+++ b/src/views/product/formCreationProduct.ejs
@@ -5,7 +5,7 @@
         <div class="titulo"><h1>Creación de productos</h1></div>
             <main class="main">
                 
-                <form action="" method="post" class="crear-formulario">
+                <form action="/listProducts" method="POST" enctype="multipart/form-data">
                     
                     <div class="formulario">
                         <div class="control-for">
@@ -26,14 +26,13 @@
                                 required>
                         </div>
                         <div class="controlCategoria">
-                            <h5>Categoria del producto</h5>
-                            <div class="categoriaProducto">
-                                <div class="inputElectrodomesticos"><input type="radio" name="categoriaProducto"
-                                        id="electrodomesticos" value="electrodomesticos">Electrodomésticos</div>
-                                <div class="inputTecnologia"><input type="radio" name="categoriaProducto" id="tecnologia"
-                                        value="tecnologia">Tecnología</div>
-                                <div class="inputVideoJuegos"><input type="radio" name="categoriaProducto" id="videoJuegos"
-                                        value="videoJuegos">Video Juegos</div>
+                            <div class="col-12 col-md-6">
+                                <label for="category" class="form-label">Categoría:</label>
+                                <select name="category" id="category" class="form-input">
+                                    <option value="">Elegí</option>
+                                    <option value="in-sale">En oferta</option>
+                                    <option value="visited">Últimos agregados</option>
+                                </select>
                             </div>
                         </div>
                         <div class="control-for">
