--- a/src/views/product/listProducts.ejs
+++ b/src/views/product/listProducts.ejs
@@ -3,21 +3,22 @@
 <body>
     <%- include('../partials/header') %>
     <main>
+        <% product.forEach((product) => { %>
         <div class="ofertas">
             <div class="ofertasBloques">
                 <div class="bloque1">
                     <div class="articulo-horno">
-                        <div class="horno"><img src="images/products/horno.jpeg"> </div>
+                        <div class="horno"><img src="images/products/<%= product.image %>"> </div>
                         <div class="relative-horno">
                             <div class="img-envio"><i class="fa-solid fa-truck"></i></div>
                             <div class="precio-descuento">
-                                <div class="precios">$6.770</div>
+                                <div class="precios"><%= product.price %></div>
                                 <div class="desc">40% OFF</div>
                             </div>
-                            <div class="descripcion">Horno microondas</div>
+                            <div class="descripcion"><%= product.description %></div>
                         </div>
                     </div>
-
+                    <% }) %>
 
                     <div class="articulo-laptop">
                         <div class="laptop"><img src="images/products/laptop.jpg"></div>
