--- a/src/views/main/home.ejs
+++ b/src/views/main/home.ejs
@@ -10,61 +10,26 @@
                     <div class="ofertasBloques">
                         <div class="bloque1">
                             <div class="articulo-horno">
-                                <a href="/product/productdetail/<%= product.id %>"></a>
-                                <div class="horno"><img src="images/products/<%= product.image %>"> </div>
-                                <div class="relative-horno">
-                                    <div class="img-envio"><i class="fa-solid fa-truck"></i></div>
-                                    <div class="precio-descuento">
-                                        <div class="precios"><%= product.price %></div>
-                                        <div class="desc">40% OFF</div>
-                                    </div>
-                                    <div class="descripcion"><%= product.name %></div>
+                                <a href="/productdetail/<%= product.id %>">
+                                    <div class="horno"><img src="images/products/<%= product.image %>"> </div>
+                                    <div class="relative-horno">
+                                        <div class="img-envio"><i class="fa-solid fa-truck"></i></div>
+                                        <div class="precio-descuento">
+                                            <div class="precios"><%= product.price %></div>
+                                            <div class="desc">40% OFF</div>
+                                        </div>
+                                        <div class="descripcion"><%= product.name %></div>
+                                    </a>
                                 </div>
                                 <% }) %>
                             </div>
 
 
-                            <div class="articulo-laptop">
-                                <a class="link" href="productdetail">
-                                <div class="laptop"><img src="images/products/laptop.jpg"></div>
-                                <div class="relative-laptop">
-                                    <div class="img-envio"><i class="fa-solid fa-truck"></i></div>
-                                    <div class="precio-descuento">
-                                        <div class="precios">$230.000</div>
-                                        <div class="desc">20% off</div>
-                                    </div>
-                                    <div class="descripcion">Laptop Pro 2019</div>
-                                </div>
-                                </a>
-                            </div>
+                           
+                               
                         </div>
-                        <div class="bloque2">
-                            <div class="articulo-samsung">
-                                <a class="link" href="productdetail">
-                                <div class="samsung"><img src="images/products/img-samsung-galaxy-s10.jpg"></div>
-                                <div class="relative-samsung">
-                                    <div class="img-envio"><i class="fa-solid fa-truck"></i></div>
-                                    <div class="precio-descuento">
-                                        <div class="precios">$70.500</div>
-                                        <div class="desc">10% off</div>
-                                    </div>
-                                    <div class="descripcion">Samsung Galaxy S10</div>
-                                </div>
-                                </a>
-                            </div>
-                            <div class="articulo-tv">
-                                <a class="link" href="productdetail">
-                                <div class="tv"><img src="images/products/img-tv-samsung-smart.jpg"></div>
-                                <div class="relative-tv">
-                                    <div class="img-envio"><i class="fa-solid fa-truck"></i></div>
-                                    <div class="precio-descuento">
-                                        <div class="precios">$23.200</div>
-                                        <div class="desc">5% off</div>
-                                    </div>
-                                    <div class="descripcion">SmartTv Samsung 43"</div>
-                                </div>
-                                </a>
-                            </div>
+                        
+                            
                         </div>
                     </div>
 
