--- a/src/views/product/formCreationProduct.ejs
+++ b/src/views/product/formCreationProduct.ejs
@@ -5,13 +5,9 @@
         <div class="titulo"><h1>Creación de productos</h1></div>
             <main class="main">
                 
-                <form action="/listProducts" method="POST" enctype="multipart/form-data">
+                <form action="/createProduct" method="POST" enctype="multipart/form-data">
                     
                     <div class="formulario">
-                        <div class="control-for">
-                            <input type="text" placeholder="Id del producto:" name="idProducto" class="input-control"
-                                id="idProducto">
-                        </div>
                         <div class="control-for">
                             <input type="text" placeholder="Nombre del producto:" name="nombreProducto" class="input-control"
                                 id="nombreProducto" required>
