Se organizan errores

--- a/src/views/product/formCreationProduct.ejs
+++ b/src/views/product/formCreationProduct.ejs
@@ -9,16 +9,16 @@
                     
                     <div class="formulario">
                         <div class="control-for">
-                            <input type="text" placeholder="Nombre del producto:" name="nombreProducto" class="input-control"
+                            <input type="text" placeholder="Nombre del producto:" name="name" class="input-control"
                                 id="nombreProducto" required>
                         </div>
                         <div class="control-for">
-                            <input type="text" placeholder="Descripción del producto" name="descripcionProducto" class="input-control"
+                            <input type="text" placeholder="Descripción del producto" name="description" class="input-control"
                                 required>
                         </div>
                         <div class="controlFoto">
                             <h5>Foto del producto</h5>
-                            <input type="file" placeholder="Foto del producto" name="fotoProducto" id="fotoProducto" class="inputFoto"
+                            <input type="file" placeholder="Foto del producto" name="image" id="fotoProducto" class="inputFoto"
                                 required>
                         </div>
                         <div class="controlCategoria">
@@ -32,11 +32,11 @@
                             </div>
                         </div>
                         <div class="control-for">
-                            <input type="text" placeholder="Colores del producto:" name="coloresProducto" class="input-control"
+                            <input type="text" placeholder="Colores del producto:" name="color" class="input-control"
                                 id="coloresProducto">
                         </div>
                         <div class="control-for">
-                            <input type="text" placeholder="Precio del producto:" name="precioProducto" class="input-control"
+                            <input type="text" placeholder="Precio del producto:" name="price" class="input-control"
                                 id="precioProducto">
                         </div>
                         <div class="boton-guardar">
