Guardando cambio en cartProduct

--- a/src/views/product/productCart.ejs
+++ b/src/views/product/productCart.ejs
@@ -45,6 +45,42 @@
                 </div>
                 <button type="reset" class="reset">Eliminar</button>
             </div>
+            <article>
+                <div class="img">
+                    <img class="article" src="images/products/img-bicicleta-fierce.jpg">
+                </div>
+                <div class="content">
+                    <div class="brand">
+                        <p>Bicicleta Rider
+                        </p>
+                    </div>
+                    <div class="name">
+                        <h2>BICICLETLA TODOTERRENO</h2>
+                    </div>
+                    <div class="id">
+                        <p>Codigo 4223046</p>
+                    </div>
+                    <div class="shipping"> <i class="fa-solid fa-check"></i>
+                        <p class="shipping">Envio a domicilio</p>
+                    </div>
+                    <div class="shipping"> <i class="fa-solid fa-check"></i>
+                        <p class="shipping">Retiro en tienda</p>
+                    </div>
+                    <i class="fa-solid fa-trash-can"></i>
+                </div>
+            </article>
+            <div class="container-total">
+                <div class="content-button">
+                    <button class="decrement"><i class="fa-solid fa-minus"></i></button>
+                    <h4>1</h4>
+                    <button class="increment"><i class="fa-solid fa-plus"></i></button>
+                </div>
+                <div class="information">
+                    <p class="price">$1.785.000 und</p>
+                    <p class="discount">8% off und</p>
+                </div>
+                <button type="reset" class="reset">Eliminar</button>
+            </div>
         </div>
         <div class="purchase-summary">
             <div class="title">
