--- a/src/views/users/editUser.ejs
+++ b/src/views/users/editUser.ejs
@@ -24,6 +24,10 @@
                                 <label>Celular:</label>
                                 <input type="text" name="celularUsuario" class="input-control">
                             </div>
+                            <div class="idUser">
+                                <label>Identificación:</label>
+                                <input type="number" name="id" class="input-control">
+                            </div>
                             <div class="img-edit">
                                 <label for="image" class="form-label">Imagen:</label>
                                 <input type="file" id="image" name="image" class="form-input">
