--- a/src/public/css/editUser.css
+++ b/src/public/css/editUser.css
@@ -18,12 +18,9 @@ main.editUser {
     border-radius: 30px;
     padding: 20px;
     margin-bottom: 20px;
-    margin-top: 10px;
-    margin: auto;
+    margin-top: 15px;
+  
     align-items: center;
-
-
-
 }
 
 .formularioRegistro {
@@ -159,7 +156,7 @@ input {
     padding-top: 5px;
     padding-bottom: 5px;
 }
-.celular {
+.celular, .idUser {
     width: 100%;
 }
 
@@ -192,16 +189,21 @@ input {
         border-radius: 5px;
         margin-right: 10px;
     }
-
+    .divNombreApellido {
+        display: flex;
+    }
+    .divCorreoContrasena {
+        display: flex;
+    }
     .nombre,
     .apellido,
     .correo,
     .contrasena {
-        width: 100%;
+        width: 50%;
         padding: 30px;
     }
 
-    .celular {
+    .celular, .idUser {
         width: 50%;
         padding: 30px;
     }
@@ -209,7 +211,7 @@ input {
     .boton-formulario {
         width: 50%;
     }
-    .img-edit {
+    .img-edit, .idUser {
         width: 50%;
 
         padding: 30px;
@@ -233,7 +235,7 @@ input {
         display: flex;
     }
 
-    .celular {
+    .celular, .idUser {
         width: 50%;
     }
 
@@ -246,7 +248,9 @@ input {
 
     .overlay {
         width: 80%;
-        margin-left: 10%;
+        margin: auto;
+        margin-top: 15px;
+        margin-bottom: 15px;
     }
 
     .boton-formulario {
