--- a/src/views/users/register.ejs
+++ b/src/views/users/register.ejs
@@ -16,10 +16,20 @@
                                 <input type="text" name="apellidoUsuario" class="input-control">
                             </div>
                         </div>
+                        <div class="container">
                         <div class="celular">
                             <label>Celular:</label>
                             <input type="text" name="celularUsuario" class="input-control">
                         </div>
+                        <div class="idUser">
+                            <label>Identificación:</label>
+                            <input type="number" name="id" class="input-control">
+                        </div>
+                        <div class="img-edit">
+                            <label for="image" class="form-label">Imagen:</label>
+                            <input type="file" id="image" name="image" class="form-input">
+                        </div>
+                    </div>
                         <div class="divCorreoContrasena">
                             <div class="correo">
                                 <label>Correo:</label>
