--- a/src/views/users/adminUser.ejs
+++ b/src/views/users/adminUser.ejs
@@ -4,22 +4,33 @@
         <%- include('../partials/header') %>
             <main>
                 <% users.forEach(users=> { %>
-                <div class="container">
-                   <a href="editUser">
-                    <div class="img-user">
-                        <img class="img-user" src="<%= users.image %>">
+                    <div class="container">
+                        <a href="editUser">
+                            <div class="img-user">
+                                <img class="img-user" src="../images/user/<%= users.image %>">
+                            </div>
+                            <div class="container-information">
+                                <div class="id">
+                                    <%= users.id_user %>
+                                </div>
+                                <div class="name">
+                                    <%= users.first_name %>
+                                </div>
+                                <div class="lastname">
+                                    <%= users.last_name %>
+                                </div>
+                                <div class="phone">
+                                    <%= users.phone %>
+                                </div>
+                                <div class="email">
+                                    <%= users.email %>
+                                </div>
+                            </div>
+                        </a>
                     </div>
-                    <div class="container-information">
-                        <div class="id"><%= users.id_user %></div>
-                        <div class="name"><%= users.first_name %></div>
-                        <div class="lastname"><%= users.last_name %></div>
-                        <div class="phone"><%= users.phone %></div>
-                        <div class="email"><%= users.email %></div>
-                    </div>
-                </a>
-            </div>
-            
-            <% }); %>
+
+                    <% }); %>
+                    <a href="/register" class="btn-link">CREAR NUEVO USUARIO</a>
             </main>
             <%- include('../partials/footer') %>
     </body>
