--- a/src/views/users/register.ejs
+++ b/src/views/users/register.ejs
@@ -4,40 +4,40 @@
         <%- include('../partials/header') %>
             <div class="overlay" id="overlay">
                 <div class="formularioRegistro" id="formularioRegistro">
-                    <form action="" method="dialog" class="crear-formulario">
+                    <form class="form-horizontal" method="post" action="/adminUser" enctype="multipart/form-data">
                         <h2>Completa tus datos</h2>
                         <div class="divNombreApellido">
                             <div class="nombre">
                                 <label>Nombre:</label>
-                                <input type="text" name="nombreUsuario" id="nombreUsuario" class="input-control">
+                                <input type="text" name="first_name" id="first_name" class="input-control">
                             </div>
                             <div class="apellido">
                                 <label>Apellidos:</label>
-                                <input type="text" name="apellidoUsuario" class="input-control">
+                                <input type="text" name="last_name" id="last_name" class="input-control">
                             </div>
                         </div>
                         <div class="container">
-                        <div class="celular">
-                            <label>Celular:</label>
-                            <input type="text" name="celularUsuario" class="input-control">
+                            <div class="celular">
+                                <label>Celular:</label>
+                                <input type="number" name="phone" id="phone" class="input-control">
+                            </div>
+                            <div class="idUser">
+                                <label>Identificación:</label>
+                                <input type="number" id="id_user" name="id_user" class="input-control">
+                            </div>
+                            <div class="img-edit">
+                                <label for="image" class="form-label">Imagen:</label>
+                                <input type="file" id="image" name="image" class="form-input">
+                            </div>
                         </div>
-                        <div class="idUser">
-                            <label>Identificación:</label>
-                            <input type="number" name="id" class="input-control">
-                        </div>
-                        <div class="img-edit">
-                            <label for="image" class="form-label">Imagen:</label>
-                            <input type="file" id="image" name="image" class="form-input">
-                        </div>
-                    </div>
                         <div class="divCorreoContrasena">
                             <div class="correo">
                                 <label>Correo:</label>
-                                <input type="text" name="correoUsuario" id="correoUsuario" class="input-control">
+                                <input type="email" name="email" id="email" class="input-control">
                             </div>
                             <div class="contrasena">
                                 <label>Contraseña:</label>
-                                <input type="password" name="contraseñaUsuario" id="contraseñaUsuario"
+                                <input type="password" name="password" id="password"
                                     class="input-control">
                             </div>
                         </div>
