Se organizaron rutas

--- a/src/public/css/home.css
+++ b/src/public/css/home.css
@@ -1,3 +1,104 @@
+body {
+    min-height: 100vh;
+    margin: 0;
+    font-size: 10px;
+  }
+  
+.product-box {
+    background-color: #ffffff;
+    border-radius: 5px;
+    overflow: hidden;
+    transition: 300ms;
+    margin: 20px 0;
+  }
+  
+  .product-box a {
+    display: block;
+  }
+  
+  .product-box_image {
+    border-bottom: 1px solid lightgray;
+  }
+  
+  .product-box_data {
+    padding: 5px;
+    position: relative;
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+  }
+  
+  .product-box_data h3 {
+    font-size: 2.4em;
+    font-weight: 300;
+    margin: 0;
+  }
+  
+  .product-box_data .descuento {
+    font-size: 1.5em;
+    font-weight: 300;
+    color: green;
+    margin: 0 0 0 10px;
+  }
+  
+  .product-box_data p {
+    font-size: 1.5em;
+    width: 100%;
+    color: gray;
+    margin: 0;
+    height: 0;
+    transition: 300ms;
+    overflow: hidden;
+  }
+  
+  .product-box_data i {
+    color: green;
+    font-size: 1.8em;
+    width: 35px;
+    height: 35px;
+    text-align: center;
+    border: solid 1px;
+    border-radius: 50%;
+    position: absolute;
+    top: -15px;
+    right: 15px;
+    background-color: #ffffff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: 300ms;
+  }
+  
+  .product-box:hover {
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
+  }
+  
+  .product-box:hover p {
+    height: 40px;
+    margin-top: 15px;
+  }
+  
+  .product-box:hover i {
+    transform: rotate(360deg);
+    box-shadow: 0 0 5px green;
+  }
+  
+  a {
+    display: inline-block;
+    text-decoration: none;
+    color: inherit;
+}
+.col-lg-3 {
+    -ms-flex: 0 0 25%;
+    flex: 0 0 25%;
+    max-width: 25%;
+    padding: 10px;
+}
+
+
+
+
+-------------------------------------------------------
 * {
     margin: 0;
     padding: 0;
@@ -110,6 +211,7 @@ li.menuHeader {
     border-radius: 5px;    
 }
 .banner{
+    
     width: 100%;    
 }
 .banner img{
@@ -288,8 +390,21 @@ main{
     padding-top: 2%;
 }
 
+
+@media (min-width: 320px) {
+    .col-lg-3 {
+    -ms-flex: 0 0 100%;
+    flex: 0 0 100%;
+    max-width: 100%;
+    padding: 10px;
+    }
+}
 @media (min-width: 768px) {
-    
+.col-sm-6 {
+    -ms-flex: 0 0 50%;
+    flex: 0 0 50%;
+    max-width: 50%;
+}
     .menu{
         display: block;
     }
@@ -396,6 +511,11 @@ main{
 
 }
 @media(min-width:1024px){ 
+    .col-sm-6 {
+        -ms-flex: 0 0 25%;
+        flex: 0 0 25%;
+        max-width: 25%;
+    }
     .ofertasBloques{
         display: flex;
     }
