--- a/src/views/product/formCreationProduct.ejs
+++ b/src/views/product/formCreationProduct.ejs
@@ -9,11 +9,11 @@
                     
                     <div class="formulario">
                         <div class="control-for">
-                            <input type="text" placeholder="Nombre del producto:" name="name" class="input-control"
+                            <input type="text" placeholder="Nombre del producto:" name="name" class="input-control1"
                                 id="nombreProducto" required>
                         </div>
                         <div class="control-for">
-                            <input type="text" placeholder="Descripción del producto" name="description" class="input-control"
+                            <input type="text" placeholder="Descripción del producto" name="description" class="input-control1"
                                 required>
                         </div>
                         <div class="controlFoto">
@@ -32,12 +32,16 @@
                             </div>
                         </div>
                         <div class="control-for">
-                            <input type="text" placeholder="Colores del producto:" name="color" class="input-control"
+                            <input type="text" placeholder="Colores del producto:" name="color" class="input-control1"
                                 id="coloresProducto">
                         </div>
                         <div class="control-for">
-                            <input type="text" placeholder="Precio del producto:" name="price" class="input-control"
+                            <input type="text" placeholder="Precio del producto:" name="price" class="input-control1"
                                 id="precioProducto">
+                        </div>
+                        <div class="control-for">
+                            <input type="text" placeholder="Descuento del producto:" name="discount" class="input-control1"
+                                id="descuentoProducto">
                         </div>
                         <div class="boton-guardar">
                             <button type="submit" class="botonGuardar">GUARDAR</button>
