--- a/src/views/users/register.ejs
+++ b/src/views/users/register.ejs
@@ -4,7 +4,7 @@
         <%- include('../partials/header') %>
             <div class="overlay" id="overlay">
                 <div class="formularioRegistro" id="formularioRegistro">
-                    <form class="form-horizontal" method="post" action="/adminUser" enctype="multipart/form-data">
+                    <form class="form-horizontal" method="post" action="/register" enctype="multipart/form-data">
                         <h2>Completa tus datos</h2>
                         <div class="divNombreApellido">
                             <div class="nombre">
