--- a/src/public/css/formCreationProduct.css
+++ b/src/public/css/formCreationProduct.css
@@ -29,9 +29,12 @@ h5{
 }
 .formulario{
     margin-top: 20px;
-    width: 60%;
+    width: 100%;
 }
-.input-control{
+.control-for{
+    width: 100%;
+}
+.input-control1{
     display: flex;
     width: 100%;
     height: 35px;
