--- a/src/views/main/home.ejs
+++ b/src/views/main/home.ejs
@@ -3,49 +3,24 @@
     <body>
         <%- include('../partials/header') %>
             <main>
-                <h2>Basado en las últimas visitas</h2>
-                
-                <div class="ofertas">
-                    <% visited.forEach((product) => { %>
-                    <div class="ofertasBloques">
-                        <div class="bloque1">
-                            <div class="articulo-horno">
-                                <a href="/productdetail/<%= product.id %>">
-                                    <div class="horno"><img src="images/products/<%= product.image %>"> </div>
-                                    <div class="relative-horno">
-                                        <div class="img-envio"><i class="fa-solid fa-truck"></i></div>
-                                        <div class="precio-descuento">
-                                            <div class="precios"><%= product.price %></div>
-                                            <div class="desc">40% OFF</div>
-                                        </div>
-                                        <div class="descripcion"><%= product.name %></div>
-                                    </a>
+                <h2>Listado de productos</h2>
+                <% products.forEach((product) => { %>
+                    <div class="col-12 col-sm-6 col-lg-3">
+                        <section class="product-box">
+                            <a href="/productdetail/<%= product.id %>">
+                                <figure class="product-box_image">
+                                    <img src="/images/products/<%= product.image %>" alt="imagen de producto">
+                                </figure>
+                                <div class="product-box_data">
+                                    <h3>$<%= product.price %></h3>
+                                    <span class="descuento"><%= product.discount %> % OFF</span>
+                                    <p><%= product.name %></p>
+                                    <i class="fas fa-truck"></i>
                                 </div>
-                                <% }) %>
-                        </div>
+                            </a>
+                        </section>
                     </div>
-                        
-                </div>
-                    <h2>Ofertas</h2>
-                    <% inSale.forEach((product) => { %>
-                        <div class="ofertasBloques">
-                            <div class="bloque1">
-                                <div class="articulo-horno">
-                                    <a href="/productdetail/<%= product.id %>">
-                                        <div class="horno"><img src="images/products/<%= product.image %>"> </div>
-                                        <div class="relative-horno">
-                                            <div class="img-envio"><i class="fa-solid fa-truck"></i></div>
-                                            <div class="precio-descuento">
-                                                <div class="precios"><%= product.price %></div>
-                                                <div class="desc">40% OFF</div>
-                                            </div>
-                                            <div class="descripcion"><%= product.name %></div>
-                                        </a>
-                                    </div>
-                                    <% }) %>
-                            </div>
-                        </div>
-                </div>
+                    <% }) %>
             </main>
             <%- include('../partials/footer') %>
     </body>
