--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -1,6 +1,6 @@
 
 <header>
-    <div class="logo"><img src="images/home/logo.svg" alt="Logo ElctroArco"></div>
+    <div class="logo"><img src="/images/home/logo.svg" alt="Logo ElctroArco"></div>
     <div class="header1">
         <div class="buscarProducto">
             <input type="search" placeholder="Buscar productos,marcas" class="input-control2">
@@ -29,5 +29,5 @@
                 <i class="fas fa-bars"></i>
             </div>
     </div>
-    <div class="banner"><img src="images/home/banner.jpg"></div>
+    <div class="banner"><img src="/images/home/banner.jpg"></div>
 </header>
