se ajustan detalles a footer-partials y se ajusta productdetail

--- a/src/public/css/colors.css
+++ b/src/public/css/colors.css
@@ -10,4 +10,9 @@
     --teal:#008080;
     --grisClaro: #ebebeb;
     --rojo:#FF0000;
+    --azulFace: #3b5998;
+    --azulTwi:#00acee;
+    --rojoYou:#c4302b;
+    --rojoPint:#c8232c;
+    --purpuraInsta:#BE25A5;
 }
