--- a/src/views/partials/footer.ejs
+++ b/src/views/partials/footer.ejs
@@ -112,10 +112,11 @@
             </div>
             <div class="contenedorIconsSocialNetworks">
                 <div class="iconsSocialNetworks"><i class="fab fa-facebook-square"></i></div>
-                <div class="iconsSocialNetworks"><i class="fab fa-instagram-square"></i></div>
+                <div class="iconsSocialNetworksInsta"><i class="fab fa-instagram-square"></i></div>
                 <div class="iconsSocialNetworks"><i class="fab fa-twitter-square"></i></div>
                 <div class="iconsSocialNetworks"><i class="fab fa-youtube-square"></i></div>
                 <div class="iconsSocialNetworks"><i class="fab fa-pinterest-square"></i></div>
+
             </div>
             <div class="containerOnlineChat">
                 <div id="iconWhatsApp"><i class="fab fa-whatsapp"></i></div>
@@ -126,7 +127,7 @@
         </div>
     </div>
     <div class="containerRightsReserved">
-        <div class="logoRightsReserved"><img src="images/home/logo.svg" alt="logoElectroArco"></div>
+        <div class="logoRightsReserved"><img src="/images/home/logo.svg" alt="logoElectroArco"></div>
         <div id="textRightsReserved">Todos los derechos reservados</div>
     </div>
 </footer>
