se ajusta productdetail.ejs

--- a/src/views/product/productCart.ejs
+++ b/src/views/product/productCart.ejs
@@ -9,7 +9,7 @@
                 <h1 class="title"> Carro de compras</h1>
             </div>
             <div class="banner"><img class="banner" src="images/home/banner.jpg"></div>
-            <article>
+            <article class="article1">
                 <div class="img">
                     <img class="article" src="images/products/img-tv-samsung-smart.jpg">
                 </div>
