--- a/src/public/css/footer.css
+++ b/src/public/css/footer.css
@@ -102,6 +102,7 @@
         justify-content: space-around;
         width: 100%;
         padding: 20px 20px 10px 30px;
+        background-color: var(--blanco);
     }
 
     .contenedorIconsSocialNetworks {
