--- a/src/public/css/mediaQueryCart.css
+++ b/src/public/css/mediaQueryCart.css
@@ -41,7 +41,7 @@
 @media (min-width: 1024px) {
 
     /* ****inicio de main**** */
-    article {
+    .article1 {
         display: flex;
         flex-wrap: wrap;
         width: 50%;
