--- a/src/public/css/productdetail.css
+++ b/src/public/css/productdetail.css
@@ -1,11 +1,11 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'Roboto';
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'Roboto';
 }
 
-.containerProductDetail {
+/*.containerProductDetail {
     display: none;
 }
 
@@ -135,7 +135,7 @@
 
 
 /*----------------------------------------*/
-.product-detail {
+/*.product-detail {
     background-color: #ffffff;
     border-radius: 8px;
     overflow: hidden;
@@ -235,7 +235,7 @@
   
   
   /*====== Formularios ======*/
-  .form-label {
+/*.form-label {
     display: inline-block;
     font-size: 1.6em;
     margin: 10px 0;
@@ -262,11 +262,11 @@
 
 /*-----------------------------------------*/
 
-@media(min-width:768px) {
+/*@media(min-width:768px) {
 
     /* Start Main*/
 
-    .containerProductDetail {
+/*.containerProductDetail {
         display: grid;
         grid-template-columns: 1fr 1fr 1fr;
         grid-template-rows: 1fr 1fr 1fr;
@@ -484,17 +484,15 @@
 
     /* End Main */
 
-    .containerProductDetail1 {
+/*.containerProductDetail1 {
         display: none;
     }
-
-}
 
 @media(min-width:1024px) {
 
     /* Start Main*/
 
-    .containerNavigationBar {
+/*.containerNavigationBar {
         display: none;
     }
 
@@ -503,13 +501,12 @@
     }
 
     /* End Main */
-}
 
-@media(min-width:1440px) {
+/*@media(min-width:1440px) {
 
     /* Start Main*/
 
-    .containerNavigationBar {
+/*.containerNavigationBar {
         display: none;
     }
 
@@ -522,4 +519,162 @@
     }
 
     /* End Main */
+
+/*====== Fonts ======*/
+@import url('https://fonts.googleapis.com/css?family=Roboto:300,400,700&display=swap');
+
+
+/*====== Variables ======*/
+:root {
+  --yellow: #EAC926;
+  --dark-blue: #03264C;
+  --light-blue: #1259c3;
+  --gray: #666666;
+  --light-gray: #ebebeb;
+  --green: #39b54a;
+  --base-font-family: 'Roboto', sans-serif
+}
+
+body {
+  background-color: var(--light-gray);
+}
+
+/*====== Products ======*/
+.products-wrapper {
+  margin-top: 30px;
+  margin-bottom: 30px;
+}
+
+.products-title {
+  font-size: 2.4em;
+  font-weight: bold;
+  color: var(--gray);
+  margin-bottom: 30px;
+}
+
+/*====== Product Detail ======*/
+.product-detail {
+  background-color: #ffffff;
+  border-radius: 8px;
+  overflow: hidden;
+}
+
+.product-detail-img {
+  width: 90%;
+  display: block;
+  margin: auto;
+}
+
+.product-detail-info {
+  border-left: 1px solid var(--light-gray);
+  padding: 15px;
+  height: 100%;
+  display: block;
+}
+
+.product-detail-title {
+  font-weight: 400;
+  font-size: 2.8em;
+}
+
+.product-detail-description {
+  padding: 15px;
+  font-size: 1.8em;
+  line-height: 1.5;
+}
+
+.product-detail-price {
+  font-size: 5.5em;
+  margin: 10px 0;
+}
+
+.small {
+  font-size: 1.8em;
+  color: var(--green);
+}
+
+.small span {
+  text-decoration: line-through;
+}
+
+.actions-list {
+  margin-bottom: 30px;
+}
+
+.actions-list li {
+  display: flex;
+  align-items: center;
+  margin: 20px 0;
+  padding: 20px 0;
+}
+
+.actions-list i {
+  color: var(--green);
+  font-size: 2em;
+  margin-right: 15px;
+}
+
+.actions-list p {
+  color: var(--gray);
+  font-size: 1.7em;
+  margin: 0;
+}
+
+.buy-now-button {
+  background-color: var(--light-blue);
+  font-size: 1.6em;
+  color: #ffffff;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 15px;
+  border-radius: 8px;
+  border: none;
+  margin-bottom: 15px;
+}
+
+.action-button {
+  border: none;
+  border-radius: 8px;
+  font-size: 1.2em;
+  color: #ffffff;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  padding: 15px 30px;
+  margin-top: 15px;
+}
+
+.action-button.edit {
+  background-color: chocolate;
+}
+
+.action-button.delete {
+  background-color: rgb(248, 69, 37);
+}
+
+
+/*====== Media-Queries ======*/
+@media (min-width: 1024px) {
+
+  .row {
+    display: flex;
+  }
+
+  .col-12.col-lg-8 {
+    width: 60%;
+  }
+
+  .col-12.col-lg-4 {
+    width: 40%;
+  }
+
+}
+
+@media (min-width: 1044px) {
+
+  .product-detail {
+    width: 100%;
+  }
+
 }
