--- a/src/views/product/productdetail.ejs
+++ b/src/views/product/productdetail.ejs
@@ -5,7 +5,7 @@
     <div class="container products-wrapper">
 		<div class="row">
 			<div class="col-12">
-				<h2 class="products-title">Detalle del producto: NOMBRE DEL PRODUCTO</h2>
+				<h2 class="products-title">Detalle del producto: <%= product.name %></h2>
 			</div>
 		</div>
 		<div class="product-detail">
@@ -37,7 +37,7 @@
 								<b><%= product.discount %>% OFF</b>
 							</p>
 							<p class="product-detail-price">
-								$<%= product.price * (100 - product.discount) / 100 %>
+								$<%= (product.price * (100 - product.discount) / 100).toFixed(2) %>
 							</p>
 
 						<ul class="actions-list">
